fixed css overflow

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -74,7 +74,7 @@
 
     .main {
       grid-area: main;
-      overflow: auto;
+      overflow: hidden;
     }
 
     .footer {
