--- a/frontend/src/app/components/community/index/index.component.scss
+++ b/frontend/src/app/components/community/index/index.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  overflow: auto;
+  height: 100%;
+}
 .container-fluid {
   .header {
     display: flex;
