--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -117,7 +117,6 @@ body {
     }
   }
 
-
   &.theme-dark {
     @include mat.all-component-colors($dark-theme);
 
@@ -214,14 +213,16 @@ body {
   main {
     grid-area: main;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
 
     height: calc(
       var(--main-container-height) - var(--mat-toolbar-standard-height) - var(
           --mat-toolbar-standard-height
         ) * var(--is-mobile) - var(--bs-card-cap-padding-y) * 2 - var(
           --mat-toolbar-title-text-line-height
-        ) - var(--bs-card-border-width)
+        ) - var(--bs-card-border-width) - var(--mat-toolbar-mobile-height) - var(
+          --bs-card-border-width
+        )
     );
     @media (max-width: 599px) {
       height: calc(
@@ -229,13 +230,16 @@ body {
             --mat-toolbar-mobile-height
           ) * var(--is-mobile) - var(--bs-card-cap-padding-y) * 2 - var(
             --mat-toolbar-title-text-line-height
-          ) - var(--bs-card-border-width)
+          ) - var(--bs-card-border-width) - var(--mat-toolbar-mobile-height) - var(
+            --bs-card-border-width
+          )
       );
     }
   }
 
   footer {
     grid-area: footer;
+    height: calc(var(--mat-toolbar-mobile-height) + var(--bs-card-border-width));
   }
 }
 
@@ -270,7 +274,7 @@ body {
   main {
     grid-area: main;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     height: calc(
       var(--main-container-height) - var(--mat-toolbar-standard-height) - var(
           --mat-toolbar-standard-height
